--- a/style.css
+++ b/style.css
@@ -361,6 +361,21 @@ img {
     row-gap: 2rem;
 }
 
+.work__description {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    transition: opacity 0.3s ease-in-out;
+ }
+
 .work__img {
     box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.792);
     border-radius: .5rem;
@@ -371,6 +386,9 @@ img {
     transition: 1s;
 }
 
+.work__img:hover .work__description {
+    display: block;
+ }
 .work__img img:hover {
     transform: scale(1.1);
 }
